--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,20 +38,26 @@ jobs:
     - name: Run tests
       run: dotnet test --configuration Release --logger trx --results-directory $(System.DefaultWorkingDirectory)/TestResults
 
-    - name: Publish Test Results
-      uses: actions/upload-artifact@v2
+    - name: Load test report history
+      uses: actions/checkout@v3
+      if: always()
+      continue-on-error: true
       with:
-        name: test-results
-        path: $(System.DefaultWorkingDirectory)/TestResults
+          ref: main
+          path: main
+          
+    - name: Build test report
+      uses: simple-elf/allure-report-action@v1.7
+      if: always()
+      with:
+        gh_pages: gh-pages
+        allure_history: allure-history
+        allure_results: WeatherInfo.IntegrationTests/bin/Debug/net9.0/allure-results/* allure-results/
 
-    - name: Generate Allure Report
-      run: |
-        mkdir -p allure-results
-        cp -r WeatherInfo.IntegrationTests/bin/Debug/net9.0/allure-results/* allure-results/
-        allure generate allure-results --clean -o allure-report
-
-    - name: Deploy Allure Report to GitHub Pages
+    - name: Publish test report
       uses: peaceiris/actions-gh-pages@v3
+      if: always()
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./allure-report
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
