--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       if: always()
       with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.REPORT_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
