--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,24 +2,20 @@ name: Run Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main, gh-pages ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, gh-pages ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v1
+    - uses: actions/checkout@v4
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '9.x'
+        dotnet-version: 9.x
 
     - name: Install Playwright
       run: |
@@ -29,22 +25,20 @@ jobs:
         dotnet build
         playwright install
 
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build project
-      run: dotnet build --configuration Release
-
-    - name: Run tests
-      run: dotnet test --configuration Release --logger trx --results-directory $(System.DefaultWorkingDirectory)/TestResults
+    - name: Build & Install
+      run: dotnet build
+    - name: Ensure browsers are installed
+      run: pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
+    - name: Run your tests
+      run: dotnet test
 
     - name: Load test report history
       uses: actions/checkout@v3
       if: always()
       continue-on-error: true
       with:
-          ref: main
-          path: main
+          ref: gh-pages
+          path: gh-pages
           
     - name: Build test report
       uses: simple-elf/allure-report-action@v1.7
