--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,9 @@ jobs:
     - name: Build & Install
       run: dotnet build
     - name: Ensure browsers are installed
-      run: pwsh /WeatherInfo.IntegrationTests/bin/Debug/net9.0/playwright.ps1 install --with-deps
+      run: pwsh WeatherInfo.IntegrationTests/bin/Debug/net9.0/playwright.ps1 install --with-deps
     - name: Run your tests
       run: dotnet test
-
     - name: Load test report history
       uses: actions/checkout@v3
       if: always()
