--- a/WeatherInfo.IntegrationTests/WeatherInfo.IntegrationTests.csproj
+++ b/WeatherInfo.IntegrationTests/WeatherInfo.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -11,6 +11,7 @@
         <PackageReference Include="coverlet.collector" Version="6.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+        <PackageReference Include="Microsoft.Playwright" Version="1.50.0" />
         <PackageReference Include="Shouldly" Version="4.3.0" />
         <PackageReference Include="Testcontainers.PostgreSql" Version="4.3.0" />
         <PackageReference Include="WireMock.Net" Version="1.7.4" />
