--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,4 @@ jobs:
           github_token: ${{ secrets.REPORT_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
+          force_orphan: true
